[tool.poetry]
name = "water"
version = "0.1.0"
description = ""
authors = ["Robert Meissner <robert.meissner@codecentric.de>"]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
missingno = "^0.5.1"
seaborn = "^0.11.2"
plotly = "^5.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
